--- a/set.html
+++ b/set.html
@@ -12,7 +12,14 @@
   <p id="trast">Я что-нибудь напишу для вас</p>
   <p id="trist">Если готовы к такому чуду</p>
   <div class="alert">work with HSL</div>
+  <div id="boxmusic"><audio  controls autoplay>
 
-  </div>
+<source src="music.mp3" type="audio/mpeg">
+
+<source src="music.ogg" type="audio/ogg">
+  твой плеер говно
+
+</audio>
+</div>
  </body>
 </html>
