--- a/set.html
+++ b/set.html
@@ -5,15 +5,16 @@
   <title>Myself</title>
    <link rel="stylesheet" type="text/css" href="up.css" />
  </head>
- <script src="makeup.js"></script>
+ <script src="makeup.js" type="text/javascript"></script>
  <body>
   <h1>А шо мы тут делаем?</h1>
   <!-- Комментарий -->
   <p id="trast">Я что-нибудь напишу для вас</p>
-  
+
 
   <p id="trist">Если готовы к такому чуду</p>
   <div class="alert">work with HSL</div>
+  <p id="painfail"><a href="https://z1.fm/song/11140934">моя боль и радость</a></p>
   <div id="boxmusic"><audio  controls autoplay>
 
 <source src="music.mp3" type="audio/mpeg">
