--- a/new.html
+++ b/new.html
@@ -8,44 +8,49 @@
   <link href="new.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>Изучение новых тегов</h1>
+  <h1>Изучение новых тегов <img id="trubl" src="https://img.icons8.com/material/24/000000/settings--v3.png"/></h1>
 
   <hr>
   <h2>Содержание</h2>
 <ol>
-  <li>WBR</li>
-  <li>SPAN</li>
-  <li>PROGRESS</li>
-  <li>ASIDE</li>
-  <li>NAV</li>
-  <li>HEADER</li>
-  <li>FOOTER</li>
-  <li>MAIN</li>
-  <li>ARTICLE</li>
-  <li>ABBR</li>
-  <li>KBD</li>
-  <li>AUDIO</li>
-  <li>VIDEO</li>
+  <li><b> &lt; WBR&gt;</b></li>
+  <li><b> &lt; SPAN&gt;</b></li>
+  <li><b> &lt; PROGRESS&gt;</b></li>
+  <li><b> &lt; ASIDE&gt;</b></li>
+  <li><b> &lt; NAV&gt;</b></li>
+  <li><b> &lt; HEADER&gt;</b></li>
+  <li><b> &lt; FOOTER&gt;</b></li>
+  <li><b> &lt; MAIN&gt;</b></li>
+  <li><b> &lt; ARTICLE&gt;</b></li>
+  <li><b> &lt; ABBR&gt;</b></li>
+  <li><b> &lt; KBD&gt;</b></li>
+  <li><b> &lt; AUDIO&gt;</b></li>
+  <li><b> &lt; VIDEO&gt;</b></li>
 </ol>
+<hr>
+<h2>WBR</h2>
 <p>Вот самые длинные слова, для которых можно использовать тег <b>wbr :</b> пре<wbr>высоко<wbr>много<wbr>рассмотри<wbr>тельствую<wbr>щий,
 водо<wbr>грязе<wbr>торфо<wbr>парафино<wbr>лечение </p>
   <br>
   <H2>тег SPAN</H2>
   <!--Написать такой пример мне показалось максимально удачным. Просто но с прямой сутью-->
   <p>В данном тексте я изменю букву в слове, которая буд<span id="reddit">И</span>т выделена специально, как ошибка. Выделение послужит определением
-  внимания а данном случае</p>
-  <h2>разрыв экономики от COVID</h2>
+  внимания а данном случае. Вроде сработало.</p>
+  <h2>PROGRESS</h2>
+  <h3>разрыв экономики от COVID</h3>
 <p>Разрыв: <progress max="100" value="25">% </progress> выполнено на 25 процентов. Тащите нитки и иголку</p>
 
 <br>
 <!-- применить тег aside оказалось непросто. Изучив много информации- я сотворил вот это-->
-<header><h2>Думеры</h2></header>
+<h2>ASIDE</h2>
+<header><h3>Думеры</h3></header>
 <aside id="bokovick">
 <p>музыка Цоя и подобные</p>
 <p>Серость давит, а жить <b>надо</b></p>
 <p>Являются гражданами СНГ</p></aside>
 <article id="doomer">
-<i>Обьяснение, кто такие Думеры в паре слов</i>
+Обьяснение, кто такие Думеры в паре слов:
 </article>
+<h2>NAV</h2>
 </body>
 </html>
