--- a/new.html
+++ b/new.html
@@ -29,6 +29,10 @@
 </ol>
 <hr>
 <h2>WBR</h2>
+<details >
+   <summary id="sosato"><cursor></cursor>О пашке</summary>
+   <p>он сосёт хуй</p>
+  </details>
 <p>Вот самые длинные слова, для которых можно использовать тег <b>wbr :</b> пре<wbr>высоко<wbr>много<wbr>рассмотри<wbr>тельствую<wbr>щий,
 водо<wbr>грязе<wbr>торфо<wbr>парафино<wbr>лечение </p>
   <br>
